[gd_scene load_steps=7 format=3 uid="uid://8pqmpmujp6c7"]

[ext_resource type="Script" uid="uid://btpqnkg3ktily" path="res://scenes/ui/pause_menu.gd" id="1_0lmf7"]
[ext_resource type="Texture2D" uid="uid://brpelwwx2pe7c" path="res://art/ui/pause.png" id="1_6tw0m"]

[sub_resource type="InputEventKey" id="InputEventKey_0lmf7"]
device = -1
keycode = 80
unicode = 112

[sub_resource type="Shortcut" id="Shortcut_f6eus"]
events = [SubResource("InputEventKey_0lmf7")]

[sub_resource type="InputEventKey" id="InputEventKey_f6eus"]
device = -1
keycode = 80
unicode = 112

[sub_resource type="Shortcut" id="Shortcut_8uki6"]
events = [SubResource("InputEventKey_f6eus")]

[node name="PauseMenu" type="CanvasLayer"]
script = ExtResource("1_0lmf7")

[node name="PauseButton" type="Button" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -50.0
offset_bottom = 50.0
grow_horizontal = 0
shortcut = SubResource("Shortcut_f6eus")
icon = ExtResource("1_6tw0m")
flat = true
expand_icon = true

[node name="Menu" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Menu"]
layout_mode = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
size_flags_stretch_ratio = 2.48
theme_override_font_sizes/font_size = 30
text = "Paused"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Continue" type="Button" parent="Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
shortcut = SubResource("Shortcut_8uki6")
text = "Continue"

[node name="BackToSafeZone" type="Button" parent="Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Go To Previous Safe Zone"

[node name="Quit" type="Button" parent="Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Quit"

[connection signal="pressed" from="PauseButton" to="." method="_on_pause_button_pressed"]
[connection signal="pressed" from="Menu/MarginContainer/VBoxContainer/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="Menu/MarginContainer/VBoxContainer/BackToSafeZone" to="." method="_on_back_to_safe_zone_pressed"]
[connection signal="pressed" from="Menu/MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
